# gnome-tiktok

./: .gitignore  Cargo.toml  README.md  com.maxrdz.GnomeTikTok.json  com.maxrdz.GnomeTuxTok.json  com.maxrdz.Gtktok.json  com.maxrdz.TuxTok.json  meson.build  meson_options.txt
data/: com.maxrdz.GnomeTikTok.Dev.desktop.in.in  com.maxrdz.GnomeTikTok.desktop  com.maxrdz.GnomeTikTok.desktop.in  com.maxrdz.GnomeTikTok.desktop.in.in  com.maxrdz.GnomeTikTok.gschema.xml  com.maxrdz.GnomeTikTok.metainfo.xml.in.in  com.maxrdz.GnomeTuxTok.Dev.desktop.in.in  com.maxrdz.GnomeTuxTok.desktop.in.in  com.maxrdz.GnomeTuxTok.gschema.xml  com.maxrdz.GnomeTuxTok.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.rs  application.rs  config.rs  feed_carousel.rs  globals.rs  gnome-tiktok.gresource.xml  gnome-tuxtok.gresource.xml  main.rs  master_window.rs  meson.build  video_carousel.rs  welcome.rs  window.rs  window.ui
src/ui/: feed-carousel.ui  master-window.ui  video-carousel.ui  welcome.ui
