[package]
name = "gnome-tuxtok"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = [
    "Max Rodriguez <me@maxrdz.com>",
    "vkill <vkill.net@gmail.com>",
]
repository = "https://github.com/maxrdz/gnome-tuxtok" 
homepage = "https://github.com/maxrdz/gnome-tuxtok"

[profile.release]
codegen-units = 1 # Best LLVM optimization
panic = "abort" # Remove unwinding on release
opt-level = 3
lto = true
strip = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
tiktok-api = { version = "0.3" }
cfg-if = { version = "1.0" }
